Update footer nav link in grid combo page

--- a/examples/combobox/grid-combo.html
+++ b/examples/combobox/grid-combo.html
@@ -390,11 +390,6 @@
       <div role="separator" id="sc1_start_sep" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of"></div>
       <pre><code id="sc1"></code></pre>
       <div role="separator" id="sc1_end_sep" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of"></div>
-      <!--
-        The following script will show the reader the HTML source for the example that is in the div with ID 'ex1'.
-        It renders the HTML in the preceding pre element with ID 'sc1'.
-        If you change the ID of either the 'ex1' div or the 'sc1' pre, be sure to update the sourceCode.add function parameters.
-        -->
       <script>
         sourceCode.add('sc1', 'ex1');
         sourceCode.make();
@@ -402,7 +397,7 @@
     </section>
   </main>
   <nav>
-    <a href="../../../#combobox">Combobox Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
+    <a href="../../#combobox">Combobox Design Pattern in WAI-ARIA Authoring Practices 1.2</a>
   </nav>
 </body>
 </html>
