Menu pattern: Add statement that behavior is like native OS menus (pull #1232)
For issue #353,modify menu pattern to include:
>Menu widgets behave like native operating system menus, 
>such as the menus that pull down from the menubars commonly found at the top of many desktop application windows.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1912,6 +1912,7 @@
       <h3>Menu or Menu bar</h3>
       <p>
         A <a href="#menu" class="role-reference">menu</a> is a widget that offers a list of choices to the user, such as a set of actions or functions.
+        Menu widgets behave like native operating system menus, such as the menus that pull down from the menubars commonly found at the top of many desktop application windows.
         A menu is usually opened, or made visible, by activating a <a href="#menubutton">menu button</a>, choosing an item in a menu that opens a sub menu, or by invoking a command, such as <kbd>Shift + F10</kbd> in Windows, that opens a context specific menu.
         When a user activates a choice in a menu, the menu usually closes unless the choice opened a submenu.
       </p>
