Tabs pattern: Add aria-orientation reference to note about arrow key behavior (pull #1193)
For issue 976, add a reference to aria-orientation 
in the note that describes how vertically orienting tabs changes arrow key behavior.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2670,7 +2670,7 @@
             For additional guidance, see <a href="#kbd_selection_follows_focus"></a>.
           </li>
           <li>
-            If the tabs in a tab list are arranged vertically:
+            When a tab list has its <a href="#aria-orientation" class="property-reference">aria-orientation</a> set to <code>vertical</code>:
             <ol>
               <li><kbd>Down Arrow</kbd> performs as <kbd>Right Arrow</kbd> is described above.</li>
               <li><kbd>Up Arrow</kbd> performs as <kbd>Left Arrow</kbd> is described above.</li>
