Add a note about aria-owns

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1040,6 +1040,11 @@
             </ul>
           </li>
         </ol>
+        <p class="note">
+          In ARIA 1.0, the combobox role used <a href="#aria-owns" class="property-reference">aria-owns</a> instead of <a href="#aria-controls" class="property-reference">aria-controls</a>.
+          While user agents might support <a href="#aria-owns" class="property-reference">aria-owns</a> for backwards compatibility with legacy content,
+          authors are encouraged to only use <a href="#aria-controls" class="property-reference">aria-controls</a> as suggested above.
+        </p>
       </section>
     </section>
 
