Note in the intro that combobox can be editable or non-editable

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -713,6 +713,8 @@
       <h3>Combo Box</h3>
       <p>
         A <a href="#combobox" class="role-reference">combobox</a> is a widget that controls a pop-up element for helping users set the value of the combobox.
+        The combobox can either be editable, where the user can type and also select a suggested value,
+        or be non-editable, where the user can only select one of the values provided in the popup.
         The popup may be a <a href="#Listbox">listbox</a>,
         <a href="#grid">grid</a>,
         <a href="#TreeView">tree</a>, or
