Tweak text that compare combobox to listbox and menu buttons

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -772,7 +772,7 @@
       </p>
       <p>
         When constructing a widget that is both visually compact and enables users to choose one value from a set of discrete values, often either a <a href="#Listbox">listbox</a> or <a href="#menubutton">menu button</a> is simpler to implement and use.
-        One feature of combobox that distinguishes it from both listbox and menu button is that the value of the combobox is presented in an edit field.
+        One feature that combobox supports that distinguishes it from both listbox and menu button is that the value of the combobox can be presented in an editable field.
         Thus, the combobox gives users one function that both listbox and menu button lack, namely the ability to select some or all of the value for copying to the clipboard.
         One feature that distinguishes both combobox and menu button widgets from listbox widgets is their ability to provide an undo mechanism.
         In many implementations, users can navigate the set of allowed values in a combobox or menu and then decide to revert to the value the widget had before navigating by pressing <kbd>escape</kbd>.
