--- a/examples/combobox/combobox-autocomplete-both.html
+++ b/examples/combobox/combobox-autocomplete-both.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>Combobox With Both List and Inline Autocomplete Example | WAI-ARIA Authoring Practices 1.2</title>
+<title>Editable Combobox With Both List and Inline Autocomplete Example | WAI-ARIA Authoring Practices 1.2</title>
 
 <!--  Core js and css shared by all examples; do not modify when using this template. -->
 <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
@@ -28,7 +28,7 @@
     </ul>
   </nav>
   <main>
-    <h1>Combobox With Both List and Inline Autocomplete Example</h1>
+    <h1>Editable Combobox With Both List and Inline Autocomplete Example</h1>
     <p>
       The below combobox for choosing the name of a US state or territory demonstrates the
       <a href="../../#combobox">design pattern for combobox.</a>
@@ -42,9 +42,9 @@
     </p>
     <p>Similar examples include:</p>
     <ul>
-      <li><a href="combobox-autocomplete-list.html">Combobox with List Autocomplete</a>: A combobox that demonstrates the autocomplete behavior known as <q>list with manual selection</q>.</li>
-      <li><a href="combobox-autocomplete-none.html">Combobox Without Autocomplete</a>: A combo box that demonstrates the behavior associated with <code>aria-autocomplete=none</code>.</li>
-      <li><a href="grid-combo.html">Combobox with Grid Popup</a>: A combobox that presents suggestions in a grid, enabling users to navigate descriptive information about each suggestion.</li>
+      <li><a href="combobox-autocomplete-list.html">Editable Combobox with List Autocomplete</a>: An editable combobox that demonstrates the autocomplete behavior known as <q>list with manual selection</q>.</li>
+      <li><a href="combobox-autocomplete-none.html">Editable Combobox Without Autocomplete</a>: An editable combobox that demonstrates the behavior associated with <code>aria-autocomplete=none</code>.</li>
+      <li><a href="grid-combo.html">Editable Combobox with Grid Popup</a>: An editable combobox that presents suggestions in a grid, enabling users to navigate descriptive information about each suggestion.</li>
     </ul>
     <section>
       <h2 id="ex_label">Example</h2>
