--- a/examples/combobox/grid-combo.html
+++ b/examples/combobox/grid-combo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>Combobox with Grid Popup Example | WAI-ARIA Authoring Practices 1.2</title>
+<title>Editable Combobox with Grid Popup Example | WAI-ARIA Authoring Practices 1.2</title>
 
 <!--  Core js and css shared by all examples; do not modify when using this template. -->
 <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
@@ -27,7 +27,7 @@
     </ul>
   </nav>
   <main>
-    <h1>Combobox with Grid Popup Example</h1>
+    <h1>Editable Combobox with Grid Popup Example</h1>
     <p>
       The following example combobox implements the
       <a href="../../#combobox">combobox design pattern</a>
@@ -44,9 +44,9 @@
     </p>
     <p>Similar examples include: </p>
     <ul>
-      <li><a href="combobox-autocomplete-both.html">Combobox with Both List and Inline Autocomplete</a>: A combobox that demonstrates the autocomplete behavior known as <q>list with inline autocomplete</q>.</li>
-      <li><a href="combobox-autocomplete-list.html">Combobox with List Autocomplete</a>: A combobox that demonstrates the autocomplete behavior known as <q>list with manual selection</q>.</li>
-      <li><a href="combobox-autocomplete-none.html">Combobox Without Autocomplete</a>: A combo box that demonstrates the behavior associated with <code>aria-autocomplete=none</code>.</li>
+      <li><a href="combobox-autocomplete-both.html">Editable Combobox with Both List and Inline Autocomplete</a>: An editable combobox that demonstrates the autocomplete behavior known as <q>list with inline autocomplete</q>.</li>
+      <li><a href="combobox-autocomplete-list.html">Editable Combobox with List Autocomplete</a>: An editable combobox that demonstrates the autocomplete behavior known as <q>list with manual selection</q>.</li>
+      <li><a href="combobox-autocomplete-none.html">Editable Combobox Without Autocomplete</a>: An editable combobox that demonstrates the behavior associated with <code>aria-autocomplete=none</code>.</li>
     </ul>
     
     <section>
