--- a/aria-practices.html
+++ b/aria-practices.html
@@ -817,8 +817,13 @@
             <kbd>Enter</kbd>: If an autocomplete suggestion is automatically selected, accepts the suggestion either by placing the input cursor at the end of the accepted value in the combobox or by performing a default action on the value.
             For example, in a messaging application, the default action may be to add the accepted value to a list of message recipients and then clear the combobox so the user can add another recipient.
           </li>
-          <li>Printable Characters: Type characters in the combobox. Note that some implementations may regard certain characters as invalid and prevent their input.</li>
-          <li>Standard single line text editing keys appropriate for the device platform (see note below).</li>
+          <li>Printable Characters:
+            <ul>
+              <li>If the combobox is editable, type characters in the combobox. Note that some implementations may regard certain characters as invalid and prevent their input.</li>
+              <li>If the combobox is not editable, optionally moves selection to a value that starts with the typed characters.</li>
+            </ul>
+          </li>
+          <li>If the combobox is editable, it supports standard single line text editing keys appropriate for the device platform (see note below).</li>
           <li><kbd>Alt + Down Arrow</kbd> (Optional): If the popup is available but not displayed, displays the popup without moving focus.</li>
           <li><kbd>Alt + Up Arrow</kbd> (Optional): If the popup is displayed:
             <ol>
@@ -832,7 +837,7 @@
           <li>include keys for input, cursor movement, selection, and text manipulation.</li>
           <li>Standard key assignments for editing functions depend on the device operating system.</li>
           <li>The most robust approach for providing text editing functions is to rely on browsers, which  supply them for HTML inputs with type text and for elements with the <code>contenteditable</code> HTML attribute.</li>
-          <li><strong>IMPORTANT:</strong> Be sure that JavaScript does not interfere with browser-provided text editing functions by capturing key events for the keys used to perform them.</li>
+          <li><strong>IMPORTANT:</strong> Ensure JavaScript does not interfere with browser-provided text editing functions by capturing key events for the keys used to perform them.</li>
         </ol>
         <h5>Listbox Popup Keyboard Interaction</h5>
         <p>When focus is in a listbox popup:</p>
